# models/user.js
@@ -12,7 +12,6 @@ const userSchema = new Schema(
     password: {
       type: String,
       minlength: 8,
-
       required: [true, "Password is required"],
     },
     email: {
@@ -38,7 +37,7 @@ const userSchema = new Schema(
       enum: [...Object.values(gender)],
       default: null,
     },
-    dailyNormal: {
+    dailyNorma: {
       type: Number,
       default: null,
     },
@@ -66,7 +65,7 @@ const userJoiSchema = Joi.object({
   email: Joi.string().pattern(emailRegex).required().messages({
     "string.bae": `Email - should be a string type!`,
     "string.empty": `Email - cannot be an empty!`,
-    "any.required": `Password is a required!`,
+    "any.required": `Email is a required!`,
     "string.pattern.base": `Email - invalid pattern!`,
   }),
 });
@@ -86,10 +85,10 @@ const userUpdate = Joi.object({
 });
 
 const updateWaterRate = Joi.object({
-  dailyNormal: Joi.number().min(1).max(15000).required().messages({
-    "number.base": `DailyNormal - should be a number type!`,
-    "number.min": `DailyNormal - can be minimum 1ml!`,
-    "number.max": `DailyNormal - can be maximum 15000ml!`,
+  dailyNorma: Joi.number().min(1).max(15000).required().messages({
+    "number.base": `DailyNorma - should be a number type!`,
+    "number.min": `DailyNorma - can be minimum 1ml!`,
+    "number.max": `DailyNorma - can be maximum 15000ml!`,
   }),
 });
 
